Tournament creation yields tournament id and player ids. Also added DestroyTournament that activates when an error in tournament creation occurs

--- a/AuTO/AuTO.csproj
+++ b/AuTO/AuTO.csproj
@@ -93,6 +93,7 @@
     <Compile Include="identTemp.Designer.cs">
       <DependentUpon>identTemp.cs</DependentUpon>
     </Compile>
+    <Compile Include="JSONStructs.cs" />
     <Compile Include="LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
