--- a/AuTO/AuTO.csproj
+++ b/AuTO/AuTO.csproj
@@ -108,6 +108,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scheduler.cs" />
     <Compile Include="TournamentViewControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
