--- a/AuTO/AuTO.csproj
+++ b/AuTO/AuTO.csproj
@@ -100,6 +100,12 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MatchCallingDisplayControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="MatchCallingDisplayControl.Designer.cs">
+      <DependentUpon>MatchCallingDisplayControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="MatchDisplayControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -129,6 +135,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MatchCallingDisplayControl.resx">
+      <DependentUpon>MatchCallingDisplayControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MatchDisplayControl.resx">
       <DependentUpon>MatchDisplayControl.cs</DependentUpon>
