--- a/AuTO/AuTO.csproj
+++ b/AuTO/AuTO.csproj
@@ -115,6 +115,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scheduler.cs" />
+    <Compile Include="TournamentSettingsControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TournamentSettingsControl.Designer.cs">
+      <DependentUpon>TournamentSettingsControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="TournamentViewControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -152,6 +158,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="TournamentSettingsControl.resx">
+      <DependentUpon>TournamentSettingsControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TournamentViewControl.resx">
       <DependentUpon>TournamentViewControl.cs</DependentUpon>
     </EmbeddedResource>
